# NumericalMethods

./: README.md  main.py  notebook.ipynb  pyproject.toml  requeriments.txt
differentiation/: finite_differences.py  finites_differences.py
examples/: notebook.ipynb
integration/: gauss_legendre.py  monte_carlo.py  retangle.py  simpson1.py  simpson2.py  trapezoidal.py
series/: fourier.py  taylor.py
src/numerical_methods/: __init__.py
src/numerical_methods/differentiation/: __init__.py  finites_differences.py  jacobian.py
src/numerical_methods/integration/: __init__.py  gauss_legendre.py  monte_carlo.py  rectangle.py  simpson1.py  simpson2.py  trapezoidal.py
src/numerical_methods/linear_algebra/: __init__.py
src/numerical_methods/root/: __init__.py  bisection.py  newton_raphson.py  redders.py
src/numerical_methods/series/: __init__.py  fourier.py  taylor.py
src/numerical_methods/visualization/: __init__.py  plotter.py
tests/: test_differentiation.py  test_integration.py  test_root.py  test_series.py
visualization/: plotter.py
