[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numerical-methods"
version = "2.4.8"
description = "Educational implementations of classic numerical methods"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib"]
license = {file = "LICENSE.txt"}
authors = [{name = "saulohpm"}]

[project.urls]
Homepage = "https://github.com/saulohpm/NumericalMethods"
Repository = "https://github.com/saulohpm/NumericalMethods"
Documentation = "https://github.com/saulohpm/NumericalMethods#readme"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]